--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -85,6 +85,8 @@
     <color name="grey_dark_more">#5D5D5D</color>
     <color name="grey_black">#232323</color>
     <color name="grey_black_light">#3E3E3E</color>
+  <color name="grey_ride_history">#6D6e71</color>
+
     
     
     <color name="blue_light">#4E75D8</color>
