--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_history.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_history.xml
@@ -22,22 +22,122 @@
 
             <Button
                 android:id="@+id/backBtn"
-                android:layout_width="82px"
+                android:layout_width="60px"
                 android:layout_height="82px"
                 android:layout_centerVertical="true"
                 android:background="@drawable/back_btn_selector"
                 android:tag="mwar" />
 
+        <RelativeLayout
+            android:id="@+id/topRlDaily"
+            android:layout_width="178px"
+            android:layout_height="90px"
+            android:background="@color/bg_grey_opaque"
+            android:layout_toRightOf="@+id/backBtn"
+            android:gravity="center"
+            android:splitMotionEvents="false" >
+
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/daily"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:gravity="center"
-                android:text="@string/history"
+                android:text="Daily"
+                android:layout_marginRight="40px"
                 android:textColor="@color/white"
-                android:textSize="48px" />
+                android:textSize="28px" />
+            <TextView
+                android:id="@+id/dailyValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_below="@+id/daily"
+                android:text="@string/rupee_zero"
+                android:textColor="@color/white"
+                android:textSize="28px" />
+
+
+            </RelativeLayout>
+
+            <ImageView
+                android:layout_width="2px"
+                android:layout_height="90px"
+                android:layout_toRightOf="@+id/topRlDaily"
+                android:id="@+id/imageViewVertical"
+                android:background="@color/white"/>
+
+            <RelativeLayout
+                android:id="@+id/topRlWeekly"
+                android:layout_width="238px"
+                android:layout_height="90px"
+                android:layout_toRightOf="@+id/imageViewVertical"
+                android:gravity="center"
+                android:background="@color/bg_grey_opaque"
+                android:splitMotionEvents="false" >
+
+                <TextView
+                    android:id="@+id/title2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="Weekly"
+                    android:textColor="@color/white"
+                    android:textSize="28px" />
+
+                <TextView
+                    android:id="@+id/title5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_below="@+id/title2"
+                    android:text="@string/rupee_zero"
+                    android:textColor="@color/white"
+                    android:textSize="28px" />
+            </RelativeLayout>
+
+            <ImageView
+                android:layout_width="2px"
+                android:layout_height="90px"
+                android:layout_toRightOf="@+id/topRlWeekly"
+                android:id="@+id/imageViewVertical1"
+                android:background="@color/white"/>
+
+            <RelativeLayout
+                android:id="@+id/topRlMonthly"
+                android:layout_width="238px"
+                android:layout_height="90px"
+                android:layout_toRightOf="@+id/imageViewVertical1"
+                android:gravity="center"
+                android:background="@color/bg_grey_opaque"
+                android:splitMotionEvents="false" >
+
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="Monthly"
+                    android:textColor="@color/white"
+                    android:textSize="28px" />
+
+                <TextView
+                    android:id="@+id/title6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_below="@+id/title"
+                    android:text="@string/rupee_zero"
+                    android:textColor="@color/white"
+                    android:textSize="28px" />
+
+
+            </RelativeLayout>
+
+
         </RelativeLayout>
+
+
 
         <LinearLayout
             android:id="@+id/linearLayoutHistoryTabs"
