feature_sharing_rides: recycler view added unstable code

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_jugnoo_share_payments.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_jugnoo_share_payments.xml
@@ -2,14 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical">
+              android:orientation="vertical"
+                android:id="@+id/relative">
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:splitMotionEvents="false">
 
         <RelativeLayout
             android:id="@+id/topRl"
@@ -40,8 +35,13 @@
 
         </RelativeLayout>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewSharingRides"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        />
 
 
-    </LinearLayout>
 
 </LinearLayout>
