--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_jugnoo_share_payments.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_jugnoo_share_payments.xml
@@ -1,47 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout android:id="@+id/relative"
+              xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical"
-                android:id="@+id/relative">
+              android:orientation="vertical">
 
 
-        <RelativeLayout
-            android:id="@+id/topRl"
-            android:layout_width="match_parent"
-            android:layout_height="96px"
-            android:background="@color/bg_grey_opaque"
-            android:splitMotionEvents="false">
-
-            <Button
-                android:id="@+id/backBtn"
-                android:layout_width="90px"
-                android:layout_height="90px"
-                android:layout_centerVertical="true"
-                android:background="@drawable/back_btn_selector"
-                android:tag="mwar"/>
-
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:gravity="center"
-                android:text="Sharing Rides"
-                android:textColor="@color/white"
-                android:textSize="48px"/>
-
-
-        </RelativeLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerViewSharingRides"
+    <RelativeLayout
+        android:id="@+id/topRl"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        />
+        android:layout_height="96px"
+        android:background="@color/bg_grey_opaque"
+        android:splitMotionEvents="false">
 
+        <Button
+            android:id="@+id/backBtn"
+            android:layout_width="90px"
+            android:layout_height="90px"
+            android:layout_centerVertical="true"
+            android:background="@drawable/back_btn_selector"
+            android:tag="mwar"/>
+
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="Sharing Rides"
+            android:textColor="@color/white"
+            android:textSize="48px"/>
+
+
+    </RelativeLayout>
+
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayoutShareRides"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerViewSharingRides"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 
 </LinearLayout>
