--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_jugnoo_share.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_jugnoo_share.xml
@@ -135,7 +135,7 @@
                 android:gravity="center"
                 android:singleLine="true"
                 android:text="@string/rupee_zero"
-                android:textColor="@color/blue_btn"
+                android:textColor="@color/black"
                 android:textSize="48px"/>
 
 
